--- a/pot.css
+++ b/pot.css
@@ -790,6 +790,157 @@ nav {
     color: #000;
   }
   
+  /*chatbot*/
+  .chat-container{
+    height: 500px;
+    width: 600px;
+    background-color: #4b4747;
+    border-radius: 5px;
+    overflow-y: scroll;
+    padding: 10px;
+    overflow: hidden;
+    
+}
+
+.chat-input {
+    display: flex;
+    margin-top: 10px;
+  }
+  .chat-input input {
+    flex-grow: 1;
+    padding: 5px;
+    padding-right: 10px;
+    border: none;
+    border-radius: 5px;
+  }
+  .chat-input button {
+    padding: 5px 10px;
+    background-color: #4CAF50;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  #chatLog{
+    color: white;
+    font-size: 20px;
+   
+    max-height: 70%;
+    overflow-y: auto;
+    
+
+  }
+  .message{
+    background-color: blue;
+    border: 1px solid white;
+    border-radius: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 10px;
+    line-height: 2.5;
+  }
+  .options-container{
+    display: flex;
+  flex-wrap: wrap;
+  justify-content: center; /* Center the buttons horizontally */
+  align-items: center; /* Center the buttons vertically */
+  }
+  .option-button {
+    /* Default button styles */
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    margin: 10px;
+    
+   
+  }
+  
+  .option-button:hover {
+    /* Hover effect styles */
+    background-color: #d0485f;
+  }
+  .contact-button{
+    background-color: black;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    margin: 10px;
+    text-decoration: none;
+    margin: 10px;
+  }
+  .contact-button:hover{
+    background-color: #d0485f;
+  }
+
+  /*online logo*/
+  .user-status {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+  }
+  
+  .logo-icon {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+  
+    margin-right: 10px;
+    
+  }
+  .logo-icon img {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 50%;
+  }
+  
+  .online-dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: green; /* Set the desired color for the online dot */
+  }
+
+
+  /*chat icon degin*/
+  .chat-icon {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 999;
+    cursor: pointer;
+    border: 2px solid black;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+  }
+  .chat-icon img{
+    width: 100%;
+    height: auto;
+  }
+  
+  
+  .chat-container {
+    position: fixed;
+    bottom: 10px;
+    right: 0;
+    width: 300px;
+    height: 600px;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .chat-container.open {
+    transform: translateX(0);
+    z-index: 1;
+  }
+  
+  
 
   
   
